retrieveUnpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether a Contact is logically deleted.  Some records my not be physically deleted if referenced by another object.</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Official__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Official</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Funding_Official</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Org__c</fullName>
        <label>HR Org</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAN_ID__c</fullName>
        <externalId>true</externalId>
        <label>LAN ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Stop__c</fullName>
        <label>Mail Stop</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occ_Series__c</fullName>
        <label>Occupational Series</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PASTA_Person_ID__c</fullName>
        <externalId>true</externalId>
        <label>PASTA Person ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Plan__c</fullName>
        <label>Pay Plan</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Type__c</fullName>
        <label>Person Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <label>Position Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPV_CODE_DESCR__c</fullName>
        <label>Supervisor Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Supervisor_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Supervisor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisors__c</fullName>
        <label>Supervisors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Keeper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Keeper</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Time_Keeper</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Training_Officer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.TITLE</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>EPA_Person</fullName>
        <active>true</active>
        <description>The contact represents an EPA employee or contractor, who might (not) be a BAP user</description>
        <label>EPA Person</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Contacts</fullName>
        <active>true</active>
        <description>General Contacts</description>
        <label>General Contacts</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>